--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,14 @@ jobs:
           region: us-east-1
           tags: latest,${{ github.sha }}
           create_repo: true
-    - name: Deploy to EKS
+    - name: Configure kubectl and authenticate with EKS cluster
       run: |
         aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }}
+        aws eks get-token --cluster-name ${{ env.CLUSTER_NAME }} | kubectl config set-credentials eks-cluster --token-stdin
+
+    - name: Deploy to EKS
+      run: |
         kubectl apply -f k8s/deployment.yaml -n ${{ env.NAMESPACE }}
         kubectl set image deployment/my-deployment my-container=${{ env.ECR_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         kubectl rollout status deployment/my-deployment -n ${{ env.NAMESPACE }}
+
