--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: Update kubeconfig
+      run: |
+        aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }}
+        aws eks get-token --cluster-name ${{ env.CLUSTER_NAME }} | kubectl config set-credentials eks-cluster --token=$$(cat)
+
     - name: build and push image to ECR
       uses: vitr/actions-build-and-upload-to-ecs@master
       with:
@@ -44,10 +49,6 @@ jobs:
           region: us-east-1
           tags: latest,${{ github.sha }}
           create_repo: true
-    - name: Configure kubectl and authenticate with EKS cluster
-      run: |
-        aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }}
-        aws eks get-token --cluster-name ${{ env.CLUSTER_NAME }} | kubectl config set-credentials eks-cluster --token-stdin
 
     - name: Deploy to EKS
       run: |
