deloying to eks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,17 @@
+name: deploy-to-eks
+
+on:
+  push:
+    branches:
+      - main
+
+env:
+  AWS_REGION: us-east-1
+  ECR_REGISTRY: 383265273024.dkr.ecr.us-east-1.amazonaws.com
+  IMAGE_NAME: my-new-image
+  CLUSTER_NAME: mynodeapp-eks
+  NAMESPACE: default
+
 jobs:
   deploy-to-eks:
     runs-on: ubuntu-latest
@@ -25,7 +39,7 @@ jobs:
           aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }}
           aws eks get-token --cluster-name ${{ env.CLUSTER_NAME }} | xargs -0 kubectl config set-credentials eks-cluster --token
 
-      - name: build and push image to ECR
+      - name: Build and push image to ECR
         uses: vitr/actions-build-and-upload-to-ecs@master
         with:
           access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
