--- a/k8folder/deployment.yaml
+++ b/k8folder/deployment.yaml
@@ -1,4 +1,5 @@
-apiVersion: v1
+---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: my-deployment
@@ -35,3 +36,4 @@ spec:
       port: 80
       targetPort: 5000
   type: LoadBalancer
+
